tests/base/valid/ListElemOf_Valid_1.whiley
void System::main([string] args):
     xs = [1,2,3,3,3,4]
     if 1 ∈ xs:
         this.out.println(str(1))
     if 5 in xs:
         this.out.println(str(5))
  

