tests/base/invalid/SetElemOf_CompileFail_1.whiley
void System::main([string] args):
    xs = {1,2,3}
    if 1.23 ∈ xs:
        print str(1)
